# sp1-blackjack

./: README.md
example-sp1-wasm-verifier/: Cargo.toml
example-sp1-wasm-verifier/example/blackjack-program/: Cargo.toml
example-sp1-wasm-verifier/example/blackjack-program/src/: main.rs
example-sp1-wasm-verifier/example/proofs/: proof.json
example-sp1-wasm-verifier/example/script/: Cargo.toml  build.rs
example-sp1-wasm-verifier/example/script/src/: main.rs
game/: package-lock.json  package.json
game/public/wasm/: package.json  sp1_wasm_verifier.d.ts  sp1_wasm_verifier_bg.wasm  sp1_wasm_verifier_bg.wasm.d.ts
game/src/: App.js
game/src/wasm/: sp1_wasm_verifier_bg.wasm
