[package]
version = "0.1.0"
name = "example-script"
edition = "2021"


[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
hyper = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sp1-sdk = "4.0.0"
hex = "0.4.3"
clap = { version = "4.0", features = ["derive"] }


[build-dependencies]
sp1-build.workspace = true
